--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Noto+Serif+TC&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -43,7 +47,8 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style="padding-bottom: 2px;padding-top: 10px;">ABOUT</a>
+            <a class="nav-link active" aria-current="page" href="#"
+              style="padding-bottom: 2px;padding-top: 10px;">ABOUT</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -59,7 +64,7 @@
   </div>
   <!-- 第二層STORY -->
   <div class="bg-image" style="background-image: url(./macaron1.jpg);height: 100vh; ">
-    <div class="intro" style="padding-top: 250px;padding-bottom: 190px;">
+    <div class="intro" style="padding-top: 250px;padding-bottom: 190px; font-family: 'Noto Serif TC', serif;">
       一間主打低碳低醣的生酮甜點店
       <p>每樣甜點都有詳細的原料標示
       <p>讓在控制體重的你
@@ -68,273 +73,280 @@
     </div>
   </div>
   <!-- 第三層PRODUCTS之1-choco-1 -->
-  <div class="container-fluid">
+  <div class="container-fluid bg-brown">
     <div class="row row-cols-1 row-cols-md-2">
       <div class="col" style="
       padding-left: 0px;">
         <div class="intro-image"><img src="chocolate.jpg" class="img-fluid" alt=""></div>
       </div>
-      <div class="col" style="
+      <div class="col align-self-center" style="
       padding-right: 120px;
-      padding-left: 50px;">
+      padding-left: 50px; font-family: 'Libre Baskerville', serif;
+font-family: 'Noto Serif TC', serif;">
         <br>
+        <h3 style="font-family: 'Libre Baskerville', serif;">CHOCOLATE</h3>
+        <br>適量食用黑巧克力(Dark chocolate)可以提高機體的抗氧化，從而有利於預防心血管疾病、糖尿病、低血糖(Cardiovascular disease)的發生。
         <br>
-        <h3>CHOCOLATE</h3>
-        <br>適量食用黑巧克力(Dark chocolate)可以提高機體的抗氧化，從而有利於預防心血管疾病，糖尿病，低血糖(Cardiovascular disease)的發生。
-        <br>
-        <button style="
-        margin-left: 300px;
-        margin-top: 100px;">more</button>
+        <button class="morechoco">More</button>
       </div>
     </div>
   </div>
   <!-- 未點前需隱藏第四層PRODUCTS-choco-->
-  <div class="container my-4">
+  <div class="choco container-fluid bg-brown" style="
+  margin-top: 0px;
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px; font-family: 'Libre Baskerville', serif;
+font-family: 'Noto Serif TC', serif;">
     <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4">
-      <div class="col">
+      <div class="col chocolist">
         <div class="card">
           <img src="cho01.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">嚴選黑巧克力</h5>
+            <h5 class="card-title"><b>嚴選黑巧克力</b></h5>
             <p class="card-text">$280</p>
             <p class="card-text">詳細資料</p>
-            
-              <button type="button mx-auto text-nowrap" class="btn btn-outline-dark">加入購物車</button>
-            
+
+            <button type="button mx-auto text-nowrap" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col chocolist">
         <div class="card">
           <img src="cho02.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">特選白巧克力</h5>
+            <h5 class="card-title"><b>特選白巧克力</b></h5>
             <p class="card-text">$270</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+            <button type="button mx-auto text-nowrap" class="btn btn-outline-dark">加入購物車</button>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col chocolist">
         <div class="card">
           <img src="cho03.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">堅果巧克力</h5>
+            <h5 class="card-title"><b>堅果巧克力</b></h5>
             <p class="card-text">$300</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button mx-auto text-nowrap" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col chocolist">
         <div class="card">
           <img src="cho04.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">綜合巧克力</h5>
+            <h5 class="card-title"><b>綜合巧克力</b></h5>
             <p class="card-text">$280</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button mx-auto text-nowrap" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col chocolist">
         <div class="card">
           <img src="cho05.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">焦糖脆巧克力</h5>
+            <h5 class="card-title"><b>焦糖脆巧克力</b></h5>
             <p class="card-text">$250</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button mx-auto text-nowrap" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
     </div>
   </div>
   <!-- 第三層PRODUCTS之2-yogurt-1 -->
-  <div class="container-fluid">
+  <div class="container-fluid bg-red">
     <div class="row row-cols-1 row-cols-md-2">
       <div class="col" style="
       padding-left: 0px;">
         <div class="intro-image"><img src="yogurt.jpg" class="img-fluid" alt=""></div>
       </div>
-      <div class="col" style="
+      <div class="col align-self-center " style="
       padding-right: 120px;
-      padding-left: 50px;">
+      padding-left: 50px; font-family: 'Libre Baskerville', serif;
+font-family: 'Noto Serif TC', serif;">
         <br>
-        <br>
-        <h3>YOGURT</h3>
+        <h3 style="font-family: 'Libre Baskerville', serif;">YOGURT</h3>
         <br>採用保加利亞桿菌(L.bulgaricus)及嗜熱鏈球菌(S.thermophilus)這兩個菌種發酵之希臘優格。製作時使用的牛奶量，比一般優格高出4倍以上！
         <br>
-        <button style="
-        margin-left: 300px;
-        margin-top: 100px;">more</button>
+        <button class="moreyogurt">More</button>
       </div>
     </div>
   </div>
   <!-- 未點前需隱藏第四層PRODUCTS-yogurt -->
-  <div class="container my-4">
+  <div class="yogurt container-fluid bg-red" style="
+  margin-top: 0px;
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px; font-family: 'Libre Baskerville', serif;
+font-family: 'Noto Serif TC', serif;">
     <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4">
-      <div class="col">
+      <div class="col yogurtlist">
         <div class="card">
           <img src="yogurt01.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">莓果優格飲</h5>
+            <h5 class="card-title"><b>莓果優格飲</b></h5>
             <p class="card-text">$180</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col yogurtlist">
         <div class="card">
           <img src="yogurt02.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">黑莓優格飲</h5>
+            <h5 class="card-title"><b>黑莓優格飲</b></h5>
             <p class="card-text">$170</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col yogurtlist">
         <div class="card">
           <img src="yogurt03.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">草莓優格飲</h5>
+            <h5 class="card-title"><b>草莓優格飲</b></h5>
             <p class="card-text">$170</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col yogurtlist">
         <div class="card">
           <img src="yogurt04.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">綜合優格飲</h5>
+            <h5 class="card-title"><b>綜合優格飲</b></h5>
             <p class="card-text">$190</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col yogurtlist">
         <div class="card">
           <img src="yogurt05.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">巧克力優格飲</h5>
+            <h5 class="card-title"><b>巧克力優格飲</b></h5>
             <p class="card-text">$170</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
     </div>
   </div>
   <!-- 第三層PRODUCTS之3-cake-1 -->
-  <div class="container-fluid">
+  <div class="container-fluid bg-rice">
     <div class="row row-cols-1 row-cols-md-2">
-      <div class="col" style="
+      <div class="col " style="
       padding-left: 0px;">
         <div class="intro-image"><img src="cake.jpg" class="img-fluid" alt=""></div>
       </div>
-      <div class="col" style="
+      <div class="col align-self-center " style="
       padding-right: 120px;
-      padding-left: 50px;">
+      padding-left: 50px; font-family: 'Libre Baskerville', serif;
+font-family: 'Noto Serif TC', serif;">
         <br>
-        <br>
-        <h3>CAKE</h3>
+        <h3 style="font-family: 'Libre Baskerville', serif;">CAKE</h3>
         <br>獨家研發的無麩質蛋糕。主要利用水果天然的果糖或以甜菊糖(Stevia)增加甜味。用植物油、牛油果或希臘乳酪代替牛油，以改善蛋糕的飽和脂肪比例。
         <br>
-        <button style="
-        margin-left: 300px;
-        margin-top: 100px;">more</button>
+        <button class="morecake">More</button>
       </div>
     </div>
   </div>
   <!-- 未點前需隱藏第四層PRODUCTS-cake-->
-  <div class="container my-4">
-    <div class="row row-cols-1 row-cols-md-5 g-4">
-      <div class="col">
+  <div class="cake container-fluid bg-rice" style="
+  margin-top: 0px;
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px; font-family: 'Libre Baskerville', serif;
+font-family: 'Noto Serif TC', serif;">
+    <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-0">
+      <div class="col cakelist">
         <div class="card">
           <img src="cake01.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">焦糖脆蛋糕</h5>
+            <h5 class="card-title"><b>焦糖脆蛋糕</b> </h5>
             <p class="card-text">$280</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col cakelist">
         <div class="card">
           <img src="cake02.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">咖啡黑巧蛋糕</h5>
+            <h5 class="card-title"><b>咖啡黑巧蛋糕</b></h5>
             <p class="card-text">$270</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col cakelist">
         <div class="card">
           <img src="cake03.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">水果塔</h5>
+            <h5 class="card-title"><b>水果塔</b></h5>
             <p class="card-text">$300</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col cakelist">
         <div class="card">
           <img src="cake04.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">布朗尼</h5>
+            <h5 class="card-title"><b>布朗尼</b></h5>
             <p class="card-text">$250</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col cakelist">
         <div class="card">
           <img src="cake05.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">莓果起司蛋糕</h5>
+            <h5 class="card-title"><b>莓果起司蛋糕</b></h5>
             <p class="card-text">$270</p>
             <p class="card-text">詳細資料</p>
-            <div class="col-1 cols-md-5 mx-auto text-nowrap ">
-              <button type="button" class="btn btn-outline-dark">加入購物車</button>
-            </div>
+
+            <button type="button" class="btn btn-outline-dark">加入購物車</button>
+
           </div>
         </div>
       </div>
@@ -350,10 +362,11 @@
             <img src="map.jpg" class="img-fluid" alt="">
           </div>
         </div>
-        <div class="col ms-auto " style="padding-left: 80px; padding-top: 25px;">
-          <h4>SWEETGUM</h4>
+        <div class="col ms-auto " style="padding-left: 80px; padding-top: 25px; font-family: 'Libre Baskerville', serif;
+        font-family: 'Noto Serif TC', serif;">
+          <h4 class="smalllogo">SWEETGUM</h4>
           <p></p>
-          <h5>MON-SAT 13:00-23:00</h5>
+          <h5 style="font-family: 'Libre Baskerville', serif;">MON-SAT 13:00-23:00</h5>
           <p>sweetgum@gmail.com</p>
           <p>@sweetgum_9</p>
           <p>03-6685056</p>
@@ -431,8 +444,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="home.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="home.js"></script>
 </body>
 
 
