--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
 font-family: 'Noto Serif TC', serif;">
         <br>
         <h3 style="font-family: 'Libre Baskerville', serif;">CHOCOLATE</h3>
-        <br>適量食用黑巧克力(Dark chocolate)可以提高機體的抗氧化，從而有利於預防心血管疾病、糖尿病、低血糖(Cardiovascular disease)的發生。
+        <h5>適量食用黑巧克力(Dark chocolate)可以提高機體的抗氧化，從而有利於預防心血管疾病、糖尿病、低血糖(Cardiovascular disease)的發生。
         <br>
-        <button class="morechoco">More</button>
+        <button class="morechoco" style="
+        margin-bottom: 10px;
+    ">More</button>
       </div>
     </div>
   </div>
@@ -175,9 +177,11 @@ font-family: 'Noto Serif TC', serif;">
 font-family: 'Noto Serif TC', serif;">
         <br>
         <h3 style="font-family: 'Libre Baskerville', serif;">YOGURT</h3>
-        <br>採用保加利亞桿菌(L.bulgaricus)及嗜熱鏈球菌(S.thermophilus)這兩個菌種發酵之希臘優格。製作時使用的牛奶量，比一般優格高出4倍以上！
+        <h5>採用保加利亞桿菌(L.bulgaricus)及嗜熱鏈球菌(S.thermophilus)這兩個菌種發酵之希臘優格。製作時使用的牛奶量，比一般優格高出4倍以上！
         <br>
-        <button class="moreyogurt">More</button>
+        <button class="moreyogurt" style="
+        margin-bottom: 10px;
+    ">More</button>
       </div>
     </div>
   </div>
@@ -269,9 +273,11 @@ font-family: 'Noto Serif TC', serif;">
 font-family: 'Noto Serif TC', serif;">
         <br>
         <h3 style="font-family: 'Libre Baskerville', serif;">CAKE</h3>
-        <br>獨家研發的無麩質蛋糕。主要利用水果天然的果糖或以甜菊糖(Stevia)增加甜味。用植物油、牛油果或希臘乳酪代替牛油，以改善蛋糕的飽和脂肪比例。
+        <h5>獨家研發的無麩質蛋糕。主要利用水果天然的果糖或以甜菊糖(Stevia)增加甜味。用植物油、牛油果或希臘乳酪代替牛油，以改善蛋糕的飽和脂肪比例。
         <br>
-        <button class="morecake">More</button>
+        <button class="morecake" style="
+        margin-bottom: 10px;
+    ">More</button>
       </div>
     </div>
   </div>
